--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -80,13 +80,13 @@ li {
 
 .btnTwo {
     border: 2px solid black;
-    background:transparent;
+    background: transparent;
     padding: .7rem 1rem;
     color: var(--PrimaryColor);
     cursor: pointer;
     border-color: var(--PrimaryColor);
     border-radius: 0.5rem;
-    
+
 }
 
 .btnoutThree {
@@ -555,235 +555,266 @@ h2 {
     right: 40%;
     border: 5px solid white;
     animation: animated 2.3s infinite;
-} 
+}
 
 /* SUBSCRIBE  styling*/
-.subscribe{
+.subscribe {
     background: var(--colorfooter);
 }
-.subscribe .sectionContainer{
+
+.subscribe .sectionContainer {
     text-align: center;
-    
+
 }
-.subscribe .sectionContainer h2{
+
+.subscribe .sectionContainer h2 {
     color: var(--whiteColor);
     font-weight: 500;
 }
-.subscribe .sectionContainer .inputDiv{
+
+.subscribe .sectionContainer .inputDiv {
     margin-top: 1rem;
     flex-direction: column;
     background: var(--whiteColor);
     border-radius: 1rem;
 }
-.subscribe .sectionContainer .inputDiv input{
+
+.subscribe .sectionContainer .inputDiv input {
     border: none;
     outline: none;
     background: transparent;
     padding: 1rem .5rem;
 }
-.subscribe .sectionContainer .inputDiv input:placeholder{
+
+.subscribe .sectionContainer .inputDiv input:placeholder {
     font-size: 13px;
     opacity: .5;
 }
-.subscribe .sectionContainer .inputDiv .btn{
+
+.subscribe .sectionContainer .inputDiv .btn {
     width: 100%;
 }
 
 
 /* Footer section */
-.footer{
-    background:var(--colorfooter); 
+.footer {
+    background: var(--colorfooter);
 }
-.footer .sectionContainer{
+
+.footer .sectionContainer {
     gap: 2.5rem;
 }
-.footer .sectionContainer .gridOne{
+
+.footer .sectionContainer .gridOne {
     gap: 1rem;
     justify-content: center;
     margin: auto;
 }
-.footer .sectionContainer .gridOne .logoDiv .Logo{
- width: 30%;
+
+.footer .sectionContainer .gridOne .logoDiv .Logo {
+    width: 30%;
 }
-.footer .sectionContainer .gridOne .socialIcon{
+
+.footer .sectionContainer .gridOne .socialIcon {
     margin-top: 1rem;
-    gap:1rem;
+    gap: 1rem;
 }
-.footer .sectionContainer .gridOne .socialIcon .icon{
+
+.footer .sectionContainer .gridOne .socialIcon .icon {
     height: 50px;
     width: 30px;
     border-radius: 10rem;
-    border:1px solid rgb(167, 167, 167);
+    border: 1px solid rgb(167, 167, 167);
     box-shadow: var(--boxShadow);
     padding: .3rem;
     color: var(--greyText);
 
 }
-.footer .sectionContainer .gridOne .socialIcon .icon:hover{
-    background:var(--PrimaryColor) ;
+
+.footer .sectionContainer .gridOne .socialIcon .icon:hover {
+    background: var(--PrimaryColor);
     transform: translateY(-7px);
     transition: var(--transition);
     border: 1px solid var(--PrimaryColor);
     color: var(--whiteColor);
 }
-.footer .sectionContainer .footerLinks{
+
+.footer .sectionContainer .footerLinks {
     display: grid;
 }
-.footer .sectionContainer .footerLinks .linkTitle{
+
+.footer .sectionContainer .footerLinks .linkTitle {
     color: var(--whiteColor);
     font-weight: 800;
     display: block;
     padding-bottom: 1rem;
 }
-.footer .sectionContainer .footerLinks li a{
+
+.footer .sectionContainer .footerLinks li a {
     color: rgb(198, 198, 198);
     display: block;
     transition: var(--transition);
     padding: .3rem 0;
 }
-.footer .sectionContainer .footerLinks li a:hover{
-    transform : translateX(7px);
+
+.footer .sectionContainer .footerLinks li a:hover {
+    transform: translateX(7px);
     color: var(--PrimaryColor);
 }
-.footer .copyRightDiv{
+
+.footer .copyRightDiv {
     justify-content: center;
     margin-top: 1.5rem;
     padding: 1rem;
-    gap:1rem;
+    gap: 1rem;
     border-top: 1px solid var(--greyText);
     text-align: center;
 }
-.footer .copyRightDiv p a{
-  color: var(--PrimaryColor);
+
+.footer .copyRightDiv p a {
+    color: var(--PrimaryColor);
 }
 
 /* MEDIA SCREEN STYLING ================================== */
 @media screen and (min-width:480px) {
 
     /* Home section */
-    .home{
+    .home {
         padding-top: 12rem;
     }
 
     /* Search section */
-    .search{
-
-    }
+    .search {}
 
     /* Partner section */
-    .partner .partnerContainer{
-        grid-template-columns: repeat(2,1fr);
+    .partner .partnerContainer {
+        grid-template-columns: repeat(2, 1fr);
     }
 
     /* subcribe section */
-    .subscribe .sectionContainer{
+    .subscribe .sectionContainer {
         max-width: 80%;
         margin: auto;
     }
-    .subscribe .sectionContainer .inputDiv{
+
+    .subscribe .sectionContainer .inputDiv {
         flex-direction: row;
         padding: 0 .5rem;
         border-radius: 2rem;
     }
 
     /* Footer section */
-    .footer .sectionContainer{
+    .footer .sectionContainer {
         align-items: flex-start;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
-    .footer .sectionContainer .footerLinks{
-       justify-content: center;
+
+    .footer .sectionContainer .footerLinks {
+        justify-content: center;
     }
-    
+
 
 
 }
 
-@media screen and (min-width:570px){
+@media screen and (min-width:570px) {
+
     /* Home sedction */
-    .home .mainText{
+    .home .mainText {
         width: 80%;
     }
-    .home .homeImages .vimage{
+
+    .home .homeImages .vimage {
         border-radius: 2.5rem;
     }
 
     /* Support section */
-    .support .sectionContainer .infoDiv .textDiv{
+    .support .sectionContainer .infoDiv .textDiv {
         margin-top: 2rem;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     /* Info Section */
-    .info .infoContainer .tittleDiv{
+    .info .infoContainer .tittleDiv {
         flex-direction: row;
     }
-    .info .infoContainer .tittleDiv h2{
+
+    .info .infoContainer .tittleDiv h2 {
         text-align: center;
         max-width: 500px;
     }
-    .info .infoContainer .cardsDiv{
-        grid-template-columns: repeat(2,1fr);
+
+    .info .infoContainer .cardsDiv {
+        grid-template-columns: repeat(2, 1fr);
     }
 
     /* Lounge section */
-    .lounge .sectionContainer .textDiv .grids{
-        grid-template-columns: repeat(2,1fr);
+    .lounge .sectionContainer .textDiv .grids {
+        grid-template-columns: repeat(2, 1fr);
     }
-     /* subcribe section */
-     .subscribe .sectionContainer .inputDiv{
+
+    /* subcribe section */
+    .subscribe .sectionContainer .inputDiv {
         justify-content: space-between;
     }
-    .subscribe .sectionContainer .inputDiv .btn{
+
+    .subscribe .sectionContainer .inputDiv .btn {
         max-width: max-content;
     }
 
     /* Footer section */
-    .footer .sectionContainer{
+    .footer .sectionContainer {
         padding-top: 2rem;
-        grid-template-columns: repeat(3,1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
-   
+
 
 
 }
 
-@media screen and (min-width:680px){
+@media screen and (min-width:680px) {
+
     /* Home sedction */
-    .home .mainText{
-        width:90%;
-    }
-    .home .homeImages .imageDiv{
+    .home .mainText {
         width: 90%;
     }
-    .home .homeImages .imageDiv .vimage{
+
+    .home .homeImages .imageDiv {
+        width: 90%;
+    }
+
+    .home .homeImages .imageDiv .vimage {
         height: 100%;
         width: 100%;
         border-radius: 3rem;
     }
+
     /* Footer section */
-    .footer .sectionContainer{
-    grid-template-columns: repeat(4,1fr);
+    .footer .sectionContainer {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:768px) {
 
     /* navbar section */
-    .navBar{
+    .navBar {
         align-items: center;
     }
-    .navBar .navBarOne .none{
-        display: flex ;
+
+    .navBar .navBarOne .none {
+        display: flex;
         gap: 1.5rem;
     }
-    .navBar .navBarOne .none li{
+
+    .navBar .navBarOne .none li {
         font-size: 14px;
         gap: .5rem;
         color: var(--textColor);
     }
-    .navBar .navBarOne .none li:hover{
-        color: var(--PrimaryColor) ;
+
+    .navBar .navBarOne .none li:hover {
+        color: var(--PrimaryColor);
         text-decoration: underline;
     }
 
@@ -792,137 +823,157 @@ h2 {
         align-items: center;
     }
 
-    .navBar .navBartTwo .logoDiv .logo{
-            max-width: 60%;
+    .navBar .navBartTwo .logoDiv .logo {
+        max-width: 60%;
     }
-    .navBar .navBartTwo .menu{
+
+    .navBar .navBartTwo .menu {
         flex-direction: row;
         gap: .7rem;
     }
-    .navBar .navBartTwo .menu .listItem{
+
+    .navBar .navBartTwo .menu .listItem {
         padding: 0 .5rem;
         font-size: 14px;
         cursor: pointer;
         color: var(--textColor);
         font-weight: 700;
     }
-    .navBar .navBartTwo .menu .listItem:hover{
+
+    .navBar .navBartTwo .menu .listItem:hover {
         color: var(--PrimaryColor);
         font-weight: 700;
     }
-    .navBar .navBartTwo .btnOne,.btnTwo,.toggleIcon{
+
+    .navBar .navBartTwo .btnOne,
+    .btnTwo,
+    .toggleIcon {
         display: none;
     }
 
-     /* Support section */
-     .support .sectionContainer .infoDiv{
+    /* Support section */
+    .support .sectionContainer .infoDiv {
         margin-top: 5rem;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
     }
-    .support .sectionContainer .infoDiv .textDiv{
+
+    .support .sectionContainer .infoDiv .textDiv {
         margin-top: 0rem;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 
     /* Info Section */
-    .info .infoContainer{
-        padding: 0 6rem ;
+    .info .infoContainer {
+        padding: 0 6rem;
     }
-    .info .infoContainer .tittleDiv{
+
+    .info .infoContainer .tittleDiv {
         margin: auto;
         align-items: center;
         width: 90%;
     }
 
-    .info .infoContainer .cardsDiv{
-        grid-template-columns: repeat(3,1fr);
+    .info .infoContainer .cardsDiv {
+        grid-template-columns: repeat(3, 1fr);
     }
-    .info .infoContainer .cardsDiv .singleCard{
+
+    .info .infoContainer .cardsDiv .singleCard {
         max-width: 290px;
         padding: 2rem 1rem;
     }
 
-     /* Lounge section */
-     .lounge .sectionContainer{
-        grid-template-columns: repeat(2,1fr);
-     }
-     .lounge .sectionContainer .textDiv{
+    /* Lounge section */
+    .lounge .sectionContainer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .lounge .sectionContainer .textDiv {
         grid-area: 1;
-     }
-     .lounge .sectionContainer .textDiv .grids{
-        grid-template-columns: repeat(2,1fr);
+    }
+
+    .lounge .sectionContainer .textDiv .grids {
+        grid-template-columns: repeat(2, 1fr);
     }
 
     /* Partner section */
-    .partner .partnerContainer{
-        grid-template-columns: repeat(3,1fr);
+    .partner .partnerContainer {
+        grid-template-columns: repeat(3, 1fr);
     }
 
 }
-@media screen and (min-width:960px){
-     /* Home sedction */
-     .home{
+
+@media screen and (min-width:960px) {
+
+    /* Home sedction */
+    .home {
         padding-top: 13rem;
-     }
-     .home .mainText{
-        width:85%;
+    }
+
+    .home .mainText {
+        width: 85%;
         padding-bottom: 1.5rem;
         font-size: 22px;
         line-height: 4rem;
     }
 
-     /* Partner section */
-     .partner .partnerContainer{
-        grid-template-columns: repeat(4,1fr);
+    /* Partner section */
+    .partner .partnerContainer {
+        grid-template-columns: repeat(4, 1fr);
         margin: 3rem 0;
     }
 }
 
-@media screen and (min-width:1024px){
+@media screen and (min-width:1024px) {
+
     /* Default styling */
     p {
         font-size: 15px;
         line-height: 25px;
     }
-    
+
     h4 {
         font-size: 20px;
     }
-    
+
     h2 {
         font-size: 27px;
     }
+
     .section {
         padding: 6rem 0 4rem;
     }
-    
+
     .container {
         width: 75%;
         margin: auto;
     }
 
-      /* navbar section */
-    .navBar .navBarOne, .navBartTwo{
+    /* navbar section */
+    .navBar .navBarOne,
+    .navBartTwo {
         padding: 1.5rem 5rem;
     }
-    .navBar .navbar_With_Bg{
+
+    .navBar .navbar_With_Bg {
         padding: .5 5rem;
     }
 
 
     /* Home section */
 
-    .home .mainText{
+    .home .mainText {
         width: 50%;
         font-size: 25px;
         line-height: 4rem;
     }
-    .home .homeImages .imageDiv{
+
+    .home .homeImages .imageDiv {
         width: 90%;
         height: 300px;
     }
-    .home .homeImages .imageDiv .vimage{
+
+    .home .homeImages .imageDiv .vimage {
         height: 100%;
         width: 100%;
         object-fit: cover;
@@ -930,34 +981,40 @@ h2 {
     }
 
 }
-@media screen and (min-width:1106px){
+
+@media screen and (min-width:1106px) {
+
     /* subscribe section */
-    .subscribe .sectionContainer{
+    .subscribe .sectionContainer {
         max-width: 60%;
     }
 }
-@media screen and (min-width:1332px){
+
+@media screen and (min-width:1332px) {
+
     /* navbar section */
     .navBar .navBartTwo .menu {
         gap: 1rem;
         left: 0;
     }
-    .navBar .navBartTwo .menu .listItem{
+
+    .navBar .navBartTwo .menu .listItem {
         padding: 0 1.5rem;
         font-size: 14px;
     }
 
 
     /* Support section */
-    .support .sectionContainer .infoDiv{
+    .support .sectionContainer .infoDiv {
         gap: 1rem;
     }
-    .support .sectionContainer .infoDiv .textDiv .singleInfo p{
-        max-width: 500px ;
+
+    .support .sectionContainer .infoDiv .textDiv .singleInfo p {
+        max-width: 500px;
     }
 
     /* subscribe section */
-    .subscribe .sectionContainer{
+    .subscribe .sectionContainer {
         max-width: 50%;
     }
 }
