--- a/src/css/donate.css
+++ b/src/css/donate.css
@@ -6,3 +6,9 @@
   -o-background-size: cover;
   background-size: cover;
 }
+
+.donate {
+  padding-top: 10rem;
+  gap: 2rem;
+  flex-direction: column;
+}
