update rider Apply delivery page

--- a/src/css/longCard.css
+++ b/src/css/longCard.css
@@ -81,6 +81,14 @@
     text-align: center;
   }
   
+  .card-apply{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 
   .card-cancel {
     width: 100%;
