--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -199,12 +199,7 @@ h2 {
     .navBarMenu {
         margin-top: 50px;
         position: absolute;
-        /* From https://css.glass */
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
+        background: var(--whiteColor);
         padding: 1.5rem;
         border-radius: 10px;
         top: 5rem;
