fix some header,updating service,and starting on admin dashboard

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -216,7 +216,9 @@ aside .sidebar a {
   /* width: 250px;
   height: 250px; */
 }
-
+a,span{
+  cursor: pointer;
+}
 .main .insights>div:hover {
   box-shadow: none;
 }
