--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -194,6 +194,9 @@ h2 {
     box-shadow: var(--boxShadow);
 
 }
+.menu{
+    margin-bottom: 0;
+}
 
 @media screen and (max-width: 768px) {
     .navBarMenu {
