update partners food list

--- a/src/css/partner/partner.css
+++ b/src/css/partner/partner.css
@@ -3,3 +3,12 @@
 .partner {
     padding-top: 10rem;
   }
+
+  .container-fluid {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
