add Search at member side

--- a/src/css/partner/partner.css
+++ b/src/css/partner/partner.css
@@ -4,6 +4,10 @@
     padding-top: 10rem;
   }
 
+  .member{
+    padding-top: 1rem;
+  }
+
   .container-fluid {
     width: 100%;
     padding-right: 15px;
